sample_manifest (50).yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: 'topologyviewer-async-pr-10-test1'
  namespace: 'topologyviewer-dev'
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    project: 'topologyviewer-async'
    branch: 'PR-10'
    commit: 'bb701b0'
    role: java
    environment: test1
spec:
  rules:
    - host: topologyviewer-async-test1-pr-10.kubeodc-test.corp.intranet
      http:
        paths:
          - path: /
            backend:
              serviceName: 'topologyviewer-async-pr-10-test1'
              servicePort: 8090
  tls:
    - hosts:
      - 'java-pr-10-topologyviewer-async-test1.kubeodc-test.corp.intranet'
      secretName: managed-tls-secret
---
---
apiVersion: v1
kind: Service
metadata:
  name: 'topologyviewer-async-pr-10-test1'
  namespace: 'topologyviewer-dev'
  labels:
    project: 'topologyviewer-async'
    branch: 'PR-10'
    commit: 'bb701b0'
    role: java
    environment: test1
spec:
  ports:
    - port: 8090
      targetPort: 8090
      protocol: TCP
  selector:
    project: 'topologyviewer-async'
    branch: 'PR-10'
    commit: 'bb701b0'
    role: java
    environment: test1
  type: ClusterIP
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 'topologyviewer-async-pr-10-test1'
  labels:
    project: 'topologyviewer-async'
    branch: 'PR-10'
    commit: 'bb701b0'
    role: java
    environment: test1
spec:
  selector:
    matchLabels:
      project: 'topologyviewer-async'
      branch: 'PR-10'
      role: java
      environment: test1
  replicas: 1
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        project: 'topologyviewer-async'
        branch: 'PR-10'
        commit: 'bb701b0'
        role: java
        environment: test1
    spec:
      containers:
        - name: topologyviewer-async-test1
          image: 'nexusprod.corp.intranet:4567/topologyviewer/topologyviewer-async/topologyviewer-async:PR-10'
          imagePullPolicy: Always
          ports:
            - containerPort: 8090
              protocol: TCP
          resources:
            limits:
              memory: 3Gi
            requests:
              memory: 1Gi
      imagePullSecrets:
        - name: topologyviewer-async-pr-10
---
---
